--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         font-family: 'Fira Code', monospace;
       }
     </style>
+  <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
   <script type="importmap">
 {
   "imports": {
@@ -33,6 +34,6 @@
 </head>
   <body class="bg-gray-900">
     <div id="root"></div>
-    <script type="module" src="./index.tsx"></script>
+    <script type="text/babel" data-presets="react,typescript" data-type="module" src="./index.tsx"></script>
   </body>
 </html>
