Allow reselection and externalize question bank

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 </head>
   <body class="bg-gray-900">
     <div id="root"></div>
+    <script type="text/javascript" src="./questions.js"></script>
     <script type="text/babel" data-presets="react,typescript" src="./index.js"></script>
   </body>
 </html>
