--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
     <!-- Load Firebase compat libraries globally -->
     <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-app-compat.js"></script>
     <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-auth-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-firestore-compat.js"></script>
 
     <!-- Load Babel for JSX/TS transpilation -->
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 </head>
   <body class="bg-gray-900">
     <div id="root"></div>
+    <script type="text/javascript" src="./questions.js"></script>
     <script type="text/babel" data-presets="react,typescript" src="./index.js"></script>
   </body>
 </html>
